--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Upload code coverage
         uses: codecov/codecov-action@v2
         with:
-              files: ./coverage1.xml
+              # files: ./coverage1.xml
               flags: unittests
               fail_ci_if_error: true # optional (default = false)
               verbose: true # optional (default = false)
