--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -33,5 +33,6 @@ jobs:
           fail_ci_if_error: true
           files: ./coverage.xml
           flags: unittests
+          version: "v0.1.15" 
           verbose: true
 
