--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -31,7 +31,7 @@ jobs:
         uses: codecov/codecov-action@v2
         with:
           fail_ci_if_error: true
-          files: ./coverage.xml
+          files: /home/runner/coverage.xml
           flags: unittests
           version: "v0.1.15" 
           verbose: true
