--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,9 +30,9 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
-          fail_ci_if_error: true
-          files: /home/runner/coverage.xml
+          files: ./coverage1.xml
           flags: unittests
-          version: "v0.1.15" 
-          verbose: true
+          fail_ci_if_error: true # optional (default = false)
+          verbose: true # optional (default = false)
+          version: "v0.1.13"
 
