--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,17 +27,13 @@ jobs:
       - name: Run unit tests with nose
         run: nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
       
-      - name: Generate coverage report
-        run: |
-          pip install pytest
-          pip install pytest-cov
-          pytest --cov=./ --cov-report=xml 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v2
-        with:
-          files: ./coverage1.xml
-          flags: unittests
-          fail_ci_if_error: true # optional (default = false)
-          verbose: true # optional (default = false)
-          version: "v0.1.13"
+      
+      # - name: Upload coverage to Codecov
+      #   uses: codecov/codecov-action@v2
+      #   with:
+      #     files: ./coverage1.xml
+      #     flags: unittests
+      #     fail_ci_if_error: true # optional (default = false)
+      #     verbose: true # optional (default = false)
+      #     version: "v0.1.13"
 
